--- a/AminWeb/compilerconfig.json
+++ b/AminWeb/compilerconfig.json
@@ -18,5 +18,9 @@
   {
     "outputFile": "Content/Styles/Areas/UserDashboard.css",
     "inputFile": "Content/Styles/Areas/UserDashboard.scss"
+  },
+  {
+    "outputFile": "Content/Styles/Pages/Profile.css",
+    "inputFile": "Content/Styles/Pages/Profile.scss"
   }
 ]
