--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\PersianCalender.cs" />
     <Compile Include="MetaData\MdChat.cs" />
     <Compile Include="MetaData\MdDoc.cs" />
     <Compile Include="MetaData\MdPlaylist.cs" />
@@ -130,6 +131,7 @@
     <Compile Include="Repositories\IMainRepo.cs" />
     <Compile Include="Repositories\MainRepo.cs" />
     <Compile Include="Services\Heart.cs" />
+    <Compile Include="ViewModels\VmChangePassword.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
