--- a/DataLayer/App.Config
+++ b/DataLayer/App.Config
@@ -10,7 +10,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings>
-	<add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWeb.csdl|res://*/Models.AminWeb.ssdl|res://*/Models.AminWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.216.62.27;initial catalog=AminWeb;user id=Yanal;password=1710ahmad.fard;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>
-</configuration>
+
+<connectionStrings><add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWeb.csdl|res://*/Models.AminWeb.ssdl|res://*/Models.AminWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.216.62.27;initial catalog=AminWeb;user id=Yanal;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
