--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -19,14 +19,14 @@
 		<httpRuntime targetFramework="4.8" />
 
 		<authentication mode="Forms">
-			<forms name="AminWeb" defaultUrl="/" loginUrl="/HomeAccount/LoginPageShowModal" timeout="43200" />
+			<forms name="NFix" defaultUrl="/" loginUrl="/HomeAccount/LoginPageShowModal" timeout="43200" />
 		</authentication>
-		<!--<roleManager enabled="true" defaultProvider="MyEshopRoleProvider">
+		<roleManager enabled="true" defaultProvider="AminWebRoleProvider">
 			<providers>
 				<clear />
-				<add name="MyEshopRoleProvider" type="NFix.Utilities.MyEshopRoleProvider" />
+				<add name="AminWebRoleProvider" type="AminWeb.Utilities.AminWebRoleProvider" />
 			</providers>
-		</roleManager>-->
+		</roleManager>
 	</system.web>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -69,8 +69,7 @@
 	<!--<connectionStrings>
     <add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWeb.csdl|res://*/Models.AminWeb.ssdl|res://*/Models.AminWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=109.169.76.79;initial catalog=arvintav_AminWeb;user id=arvintav_Root;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>-->
-	<connectionStrings
-  >
+	<connectionStrings>
 		<add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWeb.csdl|res://*/Models.AminWeb.ssdl|res://*/Models.AminWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.216.62.27;initial catalog=AminWeb;user id=Yanal;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<system.codedom>
@@ -85,6 +84,14 @@
 		<system.web>
 			<authorization>
 				<allow roles="user"/>
+				<deny users="*"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="user">
+		<system.web>
+			<authorization>
+				<allow roles="institution"/>
 				<deny users="*"/>
 			</authorization>
 		</system.web>
