update login and register

--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -15,6 +15,7 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -133,7 +134,9 @@
     <Compile Include="Repositories\MainRepo.cs" />
     <Compile Include="Services\Heart.cs" />
     <Compile Include="ViewModels\VmChangePassword.cs" />
+    <Compile Include="ViewModels\VmEditInfo.cs" />
     <Compile Include="ViewModels\VmLogin.cs" />
+    <Compile Include="ViewModels\VmRegister.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
