--- a/DataLayer/App.Config
+++ b/DataLayer/App.Config
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
 
-<connectionStrings><add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWeb.csdl|res://*/Models.AminWeb.ssdl|res://*/Models.AminWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.216.62.27;initial catalog=AminWeb;user id=Yanal;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWeb.csdl|res://*/Models.AminWeb.ssdl|res://*/Models.AminWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.216.62.27;initial catalog=AminWeb;user id=Yanal;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/></connectionStrings><startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
