--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -35,7 +35,22 @@
 		</roleManager>
 		<compilation debug="true" targetFramework="4.8"/>
 		<httpRuntime targetFramework="4.8"/>
+
+		<!--errorPage-->
+		<customErrors mode="On" defaultRedirect="error.html">
+			<error statusCode="404" redirect="fallback.html" />
+		</customErrors>
+		<!--errorPage-->
+
 	</system.web>
+	<system.webServer>
+		<!--errorPage-->
+		<httpErrors errorMode="DetailedLocalOnly" defaultPath="fallback.html" defaultResponseMode="ExecuteURL">
+			<remove statusCode="404" subStatusCode="-1" />
+			<error statusCode="404" prefixLanguageFilePath="" path="fallback.html" responseMode="ExecuteURL" />
+		</httpErrors>
+		<!--errorPage-->
+	</system.webServer>
 
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
