--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -13,6 +13,8 @@
 		<add key="webpages:Enabled" value="false"/>
 		<add key="ClientValidationEnabled" value="true"/>
 		<add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+		 <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"></add>  
+
 		<add key="MyDomain" value="https://localhost:44316" />
 	</appSettings>
 	<!--
