--- a/AminWeb/AminWeb.csproj
+++ b/AminWeb/AminWeb.csproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="676709.jpg" />
+    <Content Include="app.js" />
     <Content Include="Areas\Admin\Content\bootstrap\css\bootstrap-grid.css" />
     <Content Include="Areas\Admin\Content\bootstrap\css\bootstrap-grid.min.css" />
     <Content Include="Areas\Admin\Content\bootstrap\css\bootstrap-reboot.css" />
@@ -1963,7 +1964,16 @@
     <Content Include="Content\Styles\Pages\VideoView.scss" />
     <Content Include="Content\Styles\Areas\UserDashboard.scss" />
     <Content Include="Content\Styles\_loading.scss" />
+    <Content Include="manifest.json" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
+    <Content Include="Resources\Static\Raster\Mobile\icon_128.png" />
+    <Content Include="Resources\Static\Raster\Mobile\icon_144.png" />
+    <Content Include="Resources\Static\Raster\Mobile\icon_152.png" />
+    <Content Include="Resources\Static\Raster\Mobile\icon_192.png" />
+    <Content Include="Resources\Static\Raster\Mobile\icon_384.png" />
+    <Content Include="Resources\Static\Raster\Mobile\icon_512.png" />
+    <Content Include="Resources\Static\Raster\Mobile\icon_72.png" />
+    <Content Include="Resources\Static\Raster\Mobile\icon_96.png" />
     <Content Include="Resources\Static\Vector\biscuit\biscuit_main.svg" />
     <Content Include="Resources\Static\Vector\Education.svg" />
     <Content Include="Resources\Static\Vector\Heart.svg" />
@@ -1989,6 +1999,7 @@
     <Content Include="Scripts\modal.js" />
     <Content Include="Scripts\Model.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="sw.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -2029,7 +2040,6 @@
     <Folder Include="Areas\User\Views\Home\" />
     <Folder Include="Resources\Classes\" />
     <Folder Include="Resources\Dynamic\" />
-    <Folder Include="Resources\Static\Raster\" />
     <Folder Include="Resources\Ticket\" />
   </ItemGroup>
   <ItemGroup>
