--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -47,10 +47,10 @@
 	</system.web>
 	<system.webServer>
 		<!--errorPage-->
-		<httpErrors errorMode="DetailedLocalOnly" defaultPath="fallback.html" defaultResponseMode="ExecuteURL">
+		<!--<httpErrors errorMode="DetailedLocalOnly" defaultPath="fallback.html" defaultResponseMode="ExecuteURL">
 			<remove statusCode="404" subStatusCode="-1" />
 			<error statusCode="404" prefixLanguageFilePath="" path="fallback.html" responseMode="ExecuteURL" />
-		</httpErrors>
+		</httpErrors>-->
 		<!--errorPage-->
 	</system.webServer>
 
