--- a/AminWeb/AminWeb.csproj
+++ b/AminWeb/AminWeb.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\AminWebRoleProvider.cs" />
     <Compile Include="Utilities\CheckContentImage.cs" />
+    <Compile Include="Utilities\ImageResizer.cs" />
     <Compile Include="Utilities\PartialToStringClass.cs" />
     <Compile Include="Utilities\SendEmail.cs" />
   </ItemGroup>
@@ -1916,6 +1917,7 @@
     <Content Include="Areas\User\Views\Classes\ListClasses.cshtml" />
     <Content Include="Areas\User\Views\Classes\Edit.cshtml" />
     <Content Include="Areas\User\Views\Video\ShowPlaylist.cshtml" />
+    <Content Include="Areas\User\Views\Video\Edit.cshtml" />
     <None Include="Content\Styles\Pages\Profile.scss" />
     <Content Include="Content\Styles\Pages\Profile.css">
       <DependentUpon>Profile.scss</DependentUpon>
@@ -2046,7 +2048,7 @@
     <Folder Include="Areas\User\Views\Home\" />
     <Folder Include="Resources\Dynamic\" />
     <Folder Include="Resources\Ticket\" />
-    <Folder Include="Resources\Video\Image\" />
+    <Folder Include="Resources\Video\Image\Thumb\" />
     <Folder Include="Resources\Video\VideoDemo\" />
     <Folder Include="Resources\Video\VideoUrl\" />
   </ItemGroup>
